contact us overflow problem fixed

--- a/resources/sass/components/_contactUs.scss
+++ b/resources/sass/components/_contactUs.scss
@@ -2,6 +2,8 @@
     width: 100%;
     height: 40rem;
 
+    overflow: hidden;
+
     position: relative;
 
 
